--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">NewsHacker</string>
     <string name="open_drawer">Open Drawer</string>
     <string name="close_drawer">Close Drawer</string>
+
+    <string name="main_drawer_top_stories">Top Stories</string>
+    <string name="main_drawer_new_stories">New Stories</string>
+    <string name="main_drawer_show_stories">Show Stories</string>
+    <string name="main_drawer_ask_stories">Ask Stories</string>
 </resources>
