--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,18 @@
 <resources>
+
     <string name="app_name">NewsHacker</string>
     <string name="open_drawer">Open Drawer</string>
     <string name="close_drawer">Close Drawer</string>
 
     <string name="main_drawer_top_stories">Top Stories</string>
+    <string name="main_drawer_top_stories_condensed">Top</string>
     <string name="main_drawer_new_stories">New Stories</string>
+    <string name="main_drawer_new_stories_condensed">New</string>
     <string name="main_drawer_show_stories">Show Stories</string>
+    <string name="main_drawer_show_stories_condensed">Show</string>
     <string name="main_drawer_ask_stories">Ask Stories</string>
+    <string name="main_drawer_ask_stories_condensed">Ask</string>
     <string name="main_drawer_job_stories">Job Stories</string>
+    <string name="main_drawer_job_stories_condensed">Job</string>
+
 </resources>
